<resources>
    <string name="app_name" translatable="false">Sharpeye</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="link_twitter" translatable="false">https://twitter.com/sharpeye_app</string>
    <string name="link_facebook" translatable="false">https://www.facebook.com/sharpeyeapp</string>
    <string name="link_instagram" translatable="false">https://www.instagram.com/sharpeye.app</string>
    <string name="link_satisfaction_form" translatable="false">https://docs.google.com/forms/d/10_PiKWYYQGnaVJz_YWOO6Ylth_3CA_zROJNyEG1jjAE/edit?usp=sharing</string>
    <string name="mail_contact" translatable="false">mailto:sharpeye.common@gmail.com</string>
    <string name="link_website" translatable="false">https://sharpeye.app</string>
    <string name="sharpeye_twitter" translatable="false">\@Sharpeye_app</string>
    <string name="sharpeye_facebook" translatable="false">sharpeye.app</string>
    <string name="sharpeye_instagram" translatable="false">sharpeye.app</string>
    <string name="versionName" translatable="false">0.1.0</string>
    <string name="versionCode" translatable="false">000001</string>
    <string name="starting_popup">starting_popup_fr</string>
    <string name="about_social">Réseaux sociaux</string>
    <string name="follow_twitter">Suivez nous sur Twitter</string>
    <string name="follow_facebook">Suivez nous sur Facebook</string>
    <string name="follow_instagram">Suivez nous sur Instagram</string>
    <string name="contact_us">Contactez nous</string>
    <string name="about">A propos</string>
    <string name="app_version">Version de l\'application</string>
    <string name="app_about">A propos de l\'application</string>
    <string name="app_build" translatable="true">Numéro du build</string>
    <string name="about_us">Qui sommes-nous?</string>
    <string name="terms_of_services" translatable="true">Conditions générales d\'utilisation</string>
    <string name="tos">CGU</string>
    <string name="active_danger_detection">Activer la détection de dangers</string>
    <string name="danger_detection_summary">Avertira le conducteur d\'un danger détecté</string>
    <string name="active_collision_prediction">Activer la prévention de collisions</string>
    <string name="collision_prevention_summary">Avertira le conducteur d\'un danger de collision imminent</string>
    <string name="active_dashcam">Activer la dashcam</string>
    <string name="dashcam_summary">Un enregistrement instantané de votre conduite sera créé quand vous roulerez</string>
    <string name="record_on_impact">Enregistrement automatique des chocs</string>
    <string name="record_impact_summary">Si l\'application détecte un mouvement brusque, la vidéo sera archivée pour pouvoir être consultable plus tard</string>
    <string name="danger_detection">Détection de dangers</string>
    <string name="sign_detection">Détection de panneaux</string>
    <string name="vocal_assist">Assistance vocale</string>
    <string name="dashcam">Caméra embarquée</string>
    <string name="active_sign_recognition">Activer la reconnaissance de panneaux</string>
    <string name="sign_recognition_summary">Détecte les panneaux importants</string>
    <string name="active_speed_display">Afficher la vitesse</string>
    <string name="speed_display_summary">Affiche la vitesse actuelle de votre véhicule en utilisant les signaux GPS</string>
    <string name="active_speed_reminder">Activer le rappel de vitesse</string>
    <string name="speed_reminder_summary">Alerte le conducteur en cas de dépassement de la limite de vitesse</string>
    <string name="active_vocal_recognition">Activer la reconnaissance vocale</string>
    <string name="vocal_recognition_summary">Active l\'assistant vocal Sharp\'Eye</string>
    <string name="tos_body">En téléchargeant ou utilisant cette application, ces conditions s\'appliqueront automatiquement à vous - vous devriez donc être certain d\'avoir lu et compris ces termes avant d\'utiliser l\'application.\n
        Vous n\'êtes pas autorisé à copier ou modifier l\'application, toute partie de l\'application ou nos marques déposées d\'aucune manière.\n
        Vous n\'êtes pas autorisé à extraire le code source de l\'application, vous ne devriez pas essayer de traduire l\'application dans d\'autres langues, ou de faire des versions dérivées. L\'application en elle-même et tous les marques déposées, copyrights, droits de base de données et autres droits de propriétés intellectuelles liés appartiennent à SharpEye.\n
        SharpEye s\'engage à ce que l\'application soit aussi utile et efficace que possible. Pour cette raison, nous nous réservons le droit de faire des changements à l\'application ou de faire payer ses services, à n\'importe quel moment et pour n\'importe quelle raison.\n
        Nous ne vous ferons jamais payer pour l\'application ou ses services sans annoncer très clairement ce pourquoi vous allez payer.\n
        L\'application SharpEye stocke et utilise des données personelles que vous nous avez fournies afin de vous fournir notre Service. Il est de votre responsabilité de surveiller votre téléphone ainsi que l\'accès à l\'application et de les garder sécurisés. Nous recommandons donc que vous n\'effectuiez pas de manipulations de type "rooting" ou "jailbreak", qui sont les processus permettant de retirer les restrictions logicielles et les limitations imposées par le système d\'exploitation officiel de votre appareil. Cela pourrait rentre votre téléphone vulnérable aux virus/malwares/programmes malveillants, compromettre les fonctionnalités de sécurité de votre téléphone, menant à un dysfonctionnement de l\'application SharpEye.
        Vous devriez savoir qu\'il existe certaines choses qui ne tombent pas sous la responsabilité de SharpEye. Certaines fonctionnalités de l\'application auront besoin d\'une connexion internet active. La connexion peut-être Wi-Fi ou fourni par votre fournisseur de réseau, mais SharpEye ne peut prendre la responsabilité d\'un dysfonctionnement de l\'application si vous n\'avez pas accès à la Wi-Fi ou si vous n\'avez plus de forfait de données mobiles.\n
        Si vous utilisez l\'application en dehors d\'une zone avec accès au Wi-Fi, vous devriez vous rappeler que les conditions d\'utilisation de votre fournisseur de réseau s\'appliquent toujours. Par conséquent, votre fournisseur de réseau (ou d\'autres acteurs tiers) pourrait appliquer un coût pour la consommation de données mobiles pour la durée de la connexion pendant l\'utilisation de l\'application. En utilisant l\'application, vous acceptez les responsabilités pour de tels coûts, y compris les frais d\'itinérance si vous utilisez l\'application en dehors de votre territoire d\'origine (par exemple le pays ou la région) sans couper l\'itinérance.\n
        Si vous n\'êtes pas le payeur de l\'abonnement mobile de l\'appareil employé pour utiliser l\'application, soyez averti que l\'accord du payeur de l\'abonnement pour utiliser l\'application est considéré comme acquis.\n
        SharpEye ne peut pas toujours assumer les responsabilités concernant la manière dont vous utilisez l\'application (par exemple, vous devez être certain que votre appareil soit chargé pendant l\'utilisation de l\'application - si la batterie se vide et que vous ne pouvez pas allumer l\'appareil pour utiliser le Service, SharpEye ne peut en prendre la responsabilité).\n
        Tout en respectant la responsabilité de SharpEye dans votre utilisation de l\'application, quand vous utilisez l\'application, il est important de se souvenir que même si nous faisons tout notre possible pour garder l\'application à jour à tout moment, nous sommes dépendants de tiers pour nous fournir les informations nécessaires pour faire parvenir l\'application jusqu\'à vous. SharpEye ne prend aucune responsabilité pour une perte, directe ou indirecte, que vous pourriez rencontrer suite à l\'utilisation d\'une fonctionnalité dépendante d\'un tiers.\n
        Nous désirons mettre à jour l\'application régulièrement. L\'application est disponible sur Android - les pré-requis pour le système (et pour tout système additionnel auquel nous donnons accès à l\'application) peuvent changer, et vous devrez télécharger les mises à jour si vous désirez continuer à utiliser l\'application.\n
        SharpEye ne promet pas que l\'application sera toujours mise à jour pour votre cas en particulier ou pour fonctionner avec la version Android installée sur votre appareil. Cependant, vous promettez de toujours accepter les mises à jour de l\'application lorsqu\'elles vous sont proposées. Nous pouvons aussi cesser de fournir l\'application, et pouvons mettre fin à son utilisation à tout moment et sans préavis. Sauf mention contraire, au moment du retrait de l\'application, (a) les droits et licences qui vous ont été attribuées cesseront; (b) vous devez cesser d\'utiliser l\'application, et (si nécessaire) la supprimer de votre appareil.\n
        Modifications des ces Conditions d\'utilisation:\n
        Nous pouvons modifier nos Conditions d\'utilisation à tout moment. Par conséquent, il vous est conseillé de relire ces conditions régulièrement pour être tenu des changements. Nous vous préviendrons des changements en mettant à jour ces conditions. Les changements sont effectifs à compter de leur parution.\n
        Nous contacter:\n
        Si vous avez des questions ou des suggestions à propos de nos Conditions d\'utilisation, n\'hésitez pas à nous contacter à sharpeye.common@gmail.com</string>
    <string name="report_bug">Signaler un problème</string>
    <string name="bug_description">Descriptif du problème:</string>
    <string name="error_report">Rapport d\'erreur</string>
    <string name="satisfaction_form">Formulaire de satisfaction</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string-array name="multi_select_list_preference_default_value"/>
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="description_info" translatable="false">Info</string>
    <string name="nav_danger">Détection de danger</string>
    <string name="nav_signs">Détection de panneaux</string>
    <string name="nav_assist">Assistance vocale</string>
    <string name="nav_dashcam">Camera embarquée</string>
    <string name="nav_about">A propos</string>
    <string name="nav_feedback">Faire un retour</string>
    <string name="nav_parameters">Paramètres</string>
    <string name="speed_counter">En attente d\'un signal GPS</string>
    <string name="gps_settings">Options GPS</string>
    <string name="settings">Options</string>
    <string name="cancel">Annuler</string>
    <string name="gps_go_settings">Le GPS n\'est pas activé. Voulez vous aller dans le menu d\'option ?</string>
    <string name="disable_speed_features">Désactiver les options de vitesse</string>
    <string name="sign_speed" translatable="false">130</string>
    <string name="empty_sign" translatable="false">emtpy sign</string>
</resources>