<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:key="Report"
            android:title="@string/report_bug">
        <Preference
                android:key="contact"
                android:title="@string/contact_us">
            <intent android:action="android.intent.action.VIEW"
                    android:data="@string/mail_contact">
                <extra android:name="android.intent.extra.TEXT"
                       android:value="@string/bug_description" />
                <extra android:name="android.intent.extra.SUBJECT"
                       android:value="@string/error_report" />
            </intent>
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
            android:key="Feedback"
            android:title="@string/nav_feedback">
        <Preference
                android:key="form"
                android:title="@string/satisfaction_form">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="@string/link_satisfaction_form"
            />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
